@startuml
skinparam shadowing false

title Bank Application

class BankApplication

class Client {
  -String name
  -List<Account> accounts
  -Account activeAccount
  +Client()
  +void setActiveAccount(Account account)
}

interface Report {
  +String getReport()
}

class Bank {
  -List<Client> clients
  +List<Client> getClients()
}

interface Account {
  +float getBalance()
  +void deposit(float amount)
  +void withdraw(float amount)
}

class SavingAccount

Client "1" *-- "*" Account
Client "*" --* "1" Bank
Report  <|-- Account
Account <|.. SavingAccount
Report <|.. Bank
BankApplication -- Bank

@enduml